--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 			            <h2>Fresher</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/pratik-nikam-722aa6206/" class="btn btn-primary py-3 px-4">Linkdin</a> 
-							<a href="https://github.com/pratiknikam17" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://www.linkedin.com/in/pratik-nikam-722aa6206/" class="btn btn-primary py-3 px-4" target="_blank">Linkdin</a> 
+							<a href="https://github.com/pratiknikam17" class="btn btn-white btn-outline-white py-3 px-4" target="_blank">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
